socialNetwork/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: socialnetwork-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-frontend-destination
  namespace: default
spec:
  host: nginx-thrift
  subsets:
  - name: west
    labels:
      region: us-west-1
  - name: east
    labels:
      region: us-east-1
  - name: central
    labels:
      region: us-central-1
  - name: south
    labels:
      region: us-south-1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: socialnetwork-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - socialnetwork-gateway
  http:
  - match:
    - headers:
        x-slate-destination:
          exact: east
    route:
    - destination:
        host: nginx-thrift
        subset: east
        port:
          number: 8080
  - match:
    - headers:
        x-slate-destination:
          exact: west
    route:
    - destination:
        host: nginx-thrift
        subset: west
        port:
          number: 8080
  - match:
    - headers:
        x-slate-destination:
          exact: central
    route:
    - destination:
        host: nginx-thrift
        subset: central
        port:
          number: 8080
  - match:
    - headers:
        x-slate-destination:
          exact: south
    route:
    - destination:
        host: nginx-thrift
        subset: south
        port:
          number: 8080
  - route:
    - destination:
        host: nginx-thrift
        port:
          number: 8080
---
